@@ -1,3 +1,8 @@
+2004-08-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/mcs51/ralloc.c (packRegsForOneuse): fixed bug #1012650 and some
+	related problems
+
 2004-08-21 Bernhard Held <bernhard AT bernhardheld.de>
 
 	* sim/ucsim/cmd.src/Makefile.in: run lex only if $(PRJDIR)/devel exists
